--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "homepage": "https://github.com/assassinoNz/ExZodOs#readme",
     "dependencies": {
         "axios": "^1.13.2",
-        "zod": "^4.1.12"
+        "zod": "^4.1.12",
+        "qs": "^6.14.0"
     }
 }
